--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-hooker",
-  "version": "2025.09.07.01",
+  "version": "2025.09.07-1",
   "description": "A powerful and flexible hook system for Node.js, inspired by the WordPress actions and filters API.",
   "files": [
     "./lib",
